  * Added #basic_auth(user, pass) to support HTTP Basic Auth (Aslak Hellesøy)
  * Added support for Sinatra and Rack (Aslak Hellesøy)
  * Added #within for manipulating the current page within a selector scope
  * Add support for simulating SSL requests (Luke Melia)
  * Add support for file fields via #attaches_file method (Kyle Hargraves)
  
* Minor enhancements

  * Allow clicking links by a regular expression
  * Add #http_accept for including MIME type HTTP "Accept" headers (Ryan Briones)
  * Add #header to support inclusion of custom HTTP headers (Ryan Briones)
  * Consider response codes 200-499 as successful enough to not raise a Webrat error (David Leal)
  * Add #field_labeled for looking up form fields by label (David Chelimsky)
  * Add Webrat.root method for cross-framework support (Krzysztof Zylawy)
  * Add support for clicking areas of an image map (Alex Lang)
  * Add should_see and should_not_see for verifying HTML response bodys
  * Support relative links, including href="?foo=bar" (Kyle Hargraves)
  * Separated Rails-specific code from the Webrat core to make it easier to use Webrat with other environments
  * Alias visits as visit, clicks_link as click_link, etc. for better readability
  * Raise error when trying to interact with a disabled form element (Luke Melia)
  * Don't send disabled form elements to the server (Nicholas A. Evans)
  * Display response body when the page load is not successful (David Leal)
  * CGI escape form field values (Miha Filej)
  * Add support for redirect_to :back by sending HTTP_REFERER headers (Hendrik Volkmer)
  * Expose current DOM (as an Hpricot object) as #current_dom
  * Add support for disabling JavaScript when clicking a link to enable testing of both JS
    and non-JS implementations (Luke Melia and Bryan Helmkamp)
  * Support &nbsp's as spaces in matching link text (Luke Melia)
  * Support button elements (Nick Sieger)
  * Support matching select options by regexp (Kyle Hargraves)