@@ -6,7 +6,7 @@ return $A(inputs).find(function(candidate){
   inputType = candidate.getAttribute('type');
   if (inputType == 'submit' || inputType == 'image') {
     var buttonText = $F(candidate);
-    return (PatternMatcher.matches(locator + '*', buttonText));
+    return (PatternMatcher.matches(locator, buttonText));
   }
   return false;
 });
